<resources>
    <string name="app_name">Tiendas</string>
    <string name="description_img_photo">imagen de la tienda</string>
    <string name="description_store_add">crear tienda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Nombre de la tienda</string>
    <string name="helper_required">Es requerido</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_website">url del sitio web</string>
    <string name="hint_photo_ur">Url de la imagen</string>
    <string name="edit_store_title_add">Crear Tienda</string>
    <string name="menu_save">save</string>
    <string name="edit_store_message_save_success">Tienda agregada correctamente</string>
</resources>