<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context=".EditStoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/comon_padding_default">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_ma_name"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_store"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_ma_name"
                android:inputType="textCapWords"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/comon_padding_default"
            android:hint="@string/hint_phone"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/couter_max_phone"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/comon_padding_default"
            android:hint="@string/hint_website"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_link"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWebsite"
                android:layout_width="match_parent"
                android:maxLines="@integer/lines_url_website"
                android:minLines="@integer/lines_url_website"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/color_link"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/comon_padding_default"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_photo_ur"
                app:startIconDrawable="@drawable/ic_link"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhotoUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="@integer/lines_url_photo"
                    android:maxLines="@integer/lines_url_photo"
                    android:inputType="textMultiLine"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_link"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/imgPhonto"
                android:layout_width="@dimen/photo_size_thumb"
                android:layout_height="@dimen/photo_size_thumb"
                android:src="@drawable/ic_image"
                android:layout_marginStart="@dimen/comon_padding_default"
                android:contentDescription="@string/description_img_photo"
                />
        </LinearLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>